feat: add data to countries table

--- a/storage/ETL/dimension_tables.ipynb
+++ b/storage/ETL/dimension_tables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Імпортування даних у таблиці вимірів сховища даних"
+    "# Імпортування даних у таблиці вимірів сховища даних"
    ]
   },
   {
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
     "import pandas as pd\n",
-    "from dotenv import dotenv_values"
+    "from dotenv import dotenv_values\n",
+    "from sqlalchemy import create_engine, text\n",
+    "from sqlalchemy.sql import select"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +57,507 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\n",
-    "    database=DB_NAME,\n",
-    "    user=DB_USER,\n",
-    "    host=DB_HOST,\n",
-    "    password=DB_PASSWORD,\n",
-    "    port=DB_PORT\n",
-    ")"
+    "engine = create_engine(f'postgresql+psycopg2://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Countries Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Імпортуємо дані з датасету"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>alpha2Code</th>\n",
+       "      <th>alpha3Code</th>\n",
+       "      <th>name</th>\n",
+       "      <th>demonym</th>\n",
+       "      <th>continentId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>afghanistan</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Afghan</td>\n",
+       "      <td>asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>aland-islands</td>\n",
+       "      <td>AX</td>\n",
+       "      <td>ALA</td>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>Ålandic</td>\n",
+       "      <td>europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>albania</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Albanian</td>\n",
+       "      <td>europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>algeria</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>DZA</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algerian</td>\n",
+       "      <td>africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>american-samoa</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>ASM</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>Samoan</td>\n",
+       "      <td>australia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id alpha2Code alpha3Code            name   demonym continentId\n",
+       "0     afghanistan         AF        AFG     Afghanistan    Afghan        asia\n",
+       "1   aland-islands         AX        ALA   Åland Islands   Ålandic      europe\n",
+       "2         albania         AL        ALB         Albania  Albanian      europe\n",
+       "3         algeria         DZ        DZA         Algeria  Algerian      africa\n",
+       "4  american-samoa         AS        ASM  American Samoa    Samoan   australia"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries_df = pd.read_csv('../data/f1db-countries.csv')\n",
+    "countries_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Приводимо дані у потрібний нам формат для сховища"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha3Code</th>\n",
+       "      <th>name</th>\n",
+       "      <th>demonym</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Afghan</td>\n",
+       "      <td>afghanistan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALA</td>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>Ålandic</td>\n",
+       "      <td>aland-islands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Albanian</td>\n",
+       "      <td>albania</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DZA</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algerian</td>\n",
+       "      <td>algeria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ASM</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>Samoan</td>\n",
+       "      <td>american-samoa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  alpha3Code            name   demonym              id\n",
+       "0        AFG     Afghanistan    Afghan     afghanistan\n",
+       "1        ALA   Åland Islands   Ålandic   aland-islands\n",
+       "2        ALB         Albania  Albanian         albania\n",
+       "3        DZA         Algeria  Algerian         algeria\n",
+       "4        ASM  American Samoa    Samoan  american-samoa"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries_df = countries_df[['alpha3Code', 'name', 'demonym', 'id']]\n",
+    "countries_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Перейменуємо стовпці"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha3_code</th>\n",
+       "      <th>name</th>\n",
+       "      <th>demonym</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Afghan</td>\n",
+       "      <td>afghanistan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALA</td>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>Ålandic</td>\n",
+       "      <td>aland-islands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Albanian</td>\n",
+       "      <td>albania</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DZA</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algerian</td>\n",
+       "      <td>algeria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ASM</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>Samoan</td>\n",
+       "      <td>american-samoa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  alpha3_code            name   demonym              id\n",
+       "0         AFG     Afghanistan    Afghan     afghanistan\n",
+       "1         ALA   Åland Islands   Ålandic   aland-islands\n",
+       "2         ALB         Albania  Albanian         albania\n",
+       "3         DZA         Algeria  Algerian         algeria\n",
+       "4         ASM  American Samoa    Samoan  american-samoa"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries_df.columns = ['alpha3_code', 'name', 'demonym', 'id']\n",
+    "countries_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Створимо функцію, яка внесе потрібні нам дані у сховище та поверне згенеровані ідентифікатори для кожного рядка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_data(df, table):\n",
+    "    df.to_sql('countries', engine, if_exists='append', index=False)\n",
+    "\n",
+    "    with engine.connect() as connection:\n",
+    "        result = connection.execute(text(f\"SELECT id FROM {table}\"))\n",
+    "        generated_ids = [row[0] for row in result]\n",
+    "        \n",
+    "    return generated_ids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вносимо дані з датафрейму у таблицю країн, функція повертає датафрейм з ідентифікаторами, які сховище присвоїло рядкам. Ці ідентифікатори додаємо до датафрейму для того, аби в наступних датафреймах замінити їх."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha3_code</th>\n",
+       "      <th>name</th>\n",
+       "      <th>demonym</th>\n",
+       "      <th>id</th>\n",
+       "      <th>dbId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Afghan</td>\n",
+       "      <td>afghanistan</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALA</td>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>Ålandic</td>\n",
+       "      <td>aland-islands</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Albanian</td>\n",
+       "      <td>albania</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DZA</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algerian</td>\n",
+       "      <td>algeria</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ASM</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>Samoan</td>\n",
+       "      <td>american-samoa</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  alpha3_code            name   demonym              id  dbId\n",
+       "0         AFG     Afghanistan    Afghan     afghanistan     1\n",
+       "1         ALA   Åland Islands   Ålandic   aland-islands     2\n",
+       "2         ALB         Albania  Albanian         albania     3\n",
+       "3         DZA         Algeria  Algerian         algeria     4\n",
+       "4         ASM  American Samoa    Samoan  american-samoa     5"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries_df['dbId'] = insert_data(countries_df[['alpha3_code', 'name', 'demonym']], 'countries')\n",
+    "countries_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Circuits Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Імпортуємо дані з датасету"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Constructors Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drivers Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grand Prix Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Races Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seasons Table"
    ]
   }
  ],
