feat: get drivers data

--- a/storage/scripts/lap_times.ipynb
+++ b/storage/scripts/lap_times.ipynb
@@ -6729,6 +6729,168 @@
     "sprint_lap_times_df['lap_time'] = sprint_lap_times_df['LapTime'].dt.total_seconds().apply(lambda x: timedelta_to_string(pd.Timedelta(seconds=x)))\n",
     "sprint_lap_times_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тепер додамо стовпці driver_id згідно з даними зі сховища. Для того щоб ідентифікувати гонщика є поле Driver з його абревіатурою. У таблиці drivers багато гонщиків могли мати ту чи іншу абревіатуру в різні періоди, проте точно ідентифікувати гонщика допоможе інше поле зі сховища, а саме його постійний номер. Справа в тому, що в чемпіонаті не так давно ввели правило постійного номеру гонщика (з 2014). Раніше гонщики не мали постійного номера, вони змінювалися кожен сезон в залежності від їхньої минулорічної позиції в чемпіонаті."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_drivers():\n",
+    "    with engine.connect() as connection:\n",
+    "        result = connection.execute(text(f\"SELECT * FROM drivers\"))\n",
+    "        data = result.fetchall()\n",
+    "        columns = result.keys()\n",
+    "        return pd.DataFrame(data, columns=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>abbrevation</th>\n",
+       "      <th>permanentnumber</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>dateofbirth</th>\n",
+       "      <th>nationality_country_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adderly Fong</td>\n",
+       "      <td>Adderly</td>\n",
+       "      <td>Fong</td>\n",
+       "      <td>Adderly Fong Cheun-yue</td>\n",
+       "      <td>FON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>1990-03-02</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Adolf Brudes</td>\n",
+       "      <td>Adolf</td>\n",
+       "      <td>Brudes</td>\n",
+       "      <td>Adolf Brudes von Breslau</td>\n",
+       "      <td>BRU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>1899-10-15</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Adolfo Schwelm Cruz</td>\n",
+       "      <td>Adolfo</td>\n",
+       "      <td>Schwelm Cruz</td>\n",
+       "      <td>Adolfo Julio Carlos Schwelm Cruz</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>1923-06-28</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adrián Campos</td>\n",
+       "      <td>Adrián</td>\n",
+       "      <td>Campos</td>\n",
+       "      <td>Adrián Campos Suñer</td>\n",
+       "      <td>CAM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>1960-06-17</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Adrian Sutil</td>\n",
+       "      <td>Adrian</td>\n",
+       "      <td>Sutil</td>\n",
+       "      <td>Adrian Sutil</td>\n",
+       "      <td>SUT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>1983-01-11</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                 name first_name     last_name  \\\n",
+       "0   1         Adderly Fong    Adderly          Fong   \n",
+       "1   2         Adolf Brudes      Adolf        Brudes   \n",
+       "2   3  Adolfo Schwelm Cruz     Adolfo  Schwelm Cruz   \n",
+       "3   4        Adrián Campos     Adrián        Campos   \n",
+       "4   5         Adrian Sutil     Adrian         Sutil   \n",
+       "\n",
+       "                          full_name abbrevation  permanentnumber gender  \\\n",
+       "0            Adderly Fong Cheun-yue         FON              NaN   MALE   \n",
+       "1          Adolf Brudes von Breslau         BRU              NaN   MALE   \n",
+       "2  Adolfo Julio Carlos Schwelm Cruz         SCH              NaN   MALE   \n",
+       "3               Adrián Campos Suñer         CAM              NaN   MALE   \n",
+       "4                      Adrian Sutil         SUT              NaN   MALE   \n",
+       "\n",
+       "  dateofbirth  nationality_country_id  \n",
+       "0  1990-03-02                     100  \n",
+       "1  1899-10-15                      84  \n",
+       "2  1923-06-28                      11  \n",
+       "3  1960-06-17                     210  \n",
+       "4  1983-01-11                      84  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drivers_df = get_drivers()\n",
+    "drivers_df.head()"
+   ]
   }
  ],
  "metadata": {
