feat: added Seasons Driver Standings

--- a/storage/scripts/fact_tables.ipynb
+++ b/storage/scripts/fact_tables.ipynb
@@ -3970,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -4074,7 +4074,7 @@
        "4             maserati     6.0  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4093,12 +4093,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "seasons_constructor_standings_df['constructor_id'] = seasons_constructor_standings_df.merge(constructors_id_df, left_on='constructorId', right_on='id', how='left')['dbId']\n",
-    "seasons_constructor_standings_df['year'] = seasons_constructor_standings_df.merge(seasons_id_df, left_on='year', right_on='id', how='left')['dbId']\n"
+    "seasons_constructor_standings_df['year'] = seasons_constructor_standings_df.merge(seasons_id_df, left_on='year', right_on='id', how='left')['dbId']"
    ]
   },
   {
@@ -4110,96 +4110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>constructor_id</th>\n",
-       "      <th>positionDisplayOrder</th>\n",
-       "      <th>positionNumber</th>\n",
-       "      <th>points</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9</td>\n",
-       "      <td>174</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9</td>\n",
-       "      <td>57</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9</td>\n",
-       "      <td>38</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>31.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>28</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>109</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year  constructor_id  positionDisplayOrder  positionNumber  points\n",
-       "0     9             174                     1             1.0    48.0\n",
-       "1     9              57                     2             2.0    40.0\n",
-       "2     9              38                     3             3.0    31.0\n",
-       "3     9              28                     4             4.0    18.0\n",
-       "4     9             109                     5             5.0     6.0"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "seasons_constructor_standings_df = seasons_constructor_standings_df[['year', 'constructor_id', 'positionDisplayOrder', 'positionNumber', 'points']]"
    ]
@@ -4234,6 +4147,198 @@
    "outputs": [],
    "source": [
     "insert_data(seasons_constructor_standings_df, 'seasons_constructor_standings')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seasons Driver Standings Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1634 entries, 0 to 1633\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   year                  1634 non-null   int64  \n",
+      " 1   positionDisplayOrder  1634 non-null   int64  \n",
+      " 2   positionNumber        1633 non-null   float64\n",
+      " 3   positionText          1634 non-null   object \n",
+      " 4   driverId              1634 non-null   object \n",
+      " 5   points                1634 non-null   float64\n",
+      "dtypes: float64(2), int64(2), object(2)\n",
+      "memory usage: 76.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "seasons_driver_standings_df = pd.read_csv('../data/f1db-seasons-driver-standings.csv')\n",
+    "seasons_driver_standings_df.head()\n",
+    "seasons_driver_standings_df.info(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Замінимо ідентифікатори датасету на ті, що згенерувало сховище (driver_id, constructor_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_driver_standings_df['driver_id'] = seasons_driver_standings_df.merge(drivers_id_df, left_on='driverId', right_on='id', how='left')['dbId']\n",
+    "seasons_driver_standings_df['year'] = seasons_driver_standings_df.merge(seasons_id_df, left_on='year', right_on='id', how='left')['dbId']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Приводимо дані у потрібний нам формат для сховища"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>driver_id</th>\n",
+       "      <th>positionDisplayOrder</th>\n",
+       "      <th>positionNumber</th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>655</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>505</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>565</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>558</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  driver_id  positionDisplayOrder  positionNumber  points\n",
+       "0     1        655                     1             1.0    30.0\n",
+       "1     1        505                     2             2.0    27.0\n",
+       "2     1        565                     3             3.0    24.0\n",
+       "3     1        558                     4             4.0    13.0\n",
+       "4     1         18                     5             5.0    11.0"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seasons_driver_standings_df = seasons_driver_standings_df[['year', 'driver_id', 'positionDisplayOrder', 'positionNumber', 'points']]\n",
+    "\n",
+    "seasons_driver_standings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Перейменуємо стовпці"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_driver_standings_df.columns = ['season_id', 'driver_id', 'position_display_order', 'position_number', 'points']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вносимо дані з датафрейму у таблицю сховища"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insert_data(seasons_driver_standings_df, 'seasons_driver_standings')"
    ]
   }
  ],
