feat: add logistic regression

--- a/prediction/random_forest.ipynb
+++ b/prediction/random_forest.ipynb
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Підбір гіперпараметрів (k): Використовуються цикл та крос-валідація для вибору найкращого значення гіперпараметра k для моделі k-найближчих сусідів (KNN)."
+    "Підбір гіперпараметрів (k): Використовуються цикл та крос-валідація для вибору найкращого значення гіперпараметра k для моделі Random Forest."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Класифікація та оцінка моделі: Модель KNN навчається на тренувальних даних, після чого здійснюється передбачення на тестових даних. Оцінюється точність моделі за допомогою метрик accuracy_score, classification_report та confusion_matrix."
+    "Класифікація та оцінка моделі: Модель Random Forest навчається на тренувальних даних, після чого здійснюється передбачення на тестових даних. Оцінюється точність моделі за допомогою метрик accuracy_score, classification_report та confusion_matrix."
    ]
   },
   {
